--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/AISample.AISampleGameMode
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/Bp_GameMode.Bp_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
